fix build process
Signed-off-by: Célio José dos Santos Filho <cjsantosf@gmail.com>

--- a/.github/workflows/charlescd-prodrelease.yml
+++ b/.github/workflows/charlescd-prodrelease.yml
@@ -347,9 +347,8 @@ jobs:
       - name: Update charts
         run: |
           mv ./install/helm-chart/Chart.yaml ./install/helm-chart/Chart.old.yaml &&
-          cat ./install/helm-chart/Chart.old.yaml | grep -v appVersion | grep -v version > ./install/helm-chart/Chart.yaml &&
+          cat ./install/helm-chart/Chart.old.yaml | grep -v appVersion > ./install/helm-chart/Chart.yaml &&
           echo -e "appVersion: ${{ steps.get_version.outputs.VERSION }}" >> ./install/helm-chart/Chart.yaml &&
-          echo -e "version: ${{ steps.get_version.outputs.VERSION }}" >> ./install/helm-chart/Chart.yaml &&
           rm -f ./install/helm-chart/Chart.old.yaml &&
           cat ./install/helm-chart/Chart.yaml
 
