Fixing keycloak public client id.
Signed-off-by: Mônica Ribeiro <monicarib1@gmail.com>

--- a/install/helm-chart/values.yaml
+++ b/install/helm-chart/values.yaml
@@ -76,7 +76,7 @@ CharlesApplications:
     keycloak:
       host: "http://examplename-keycloak-http/keycloak/auth"
       realm: charlescd
-      publicClientId: realm-charlescd
+      publicClientId: charlescd-client
       clientId: realm-charlescd
       clientSecret: "441cfd37-8443-4f3d-bf6c-ee9861b04e28"
     internalIdmEnabled: true
