--- a/butler/package.json
+++ b/butler/package.json
@@ -35,6 +35,7 @@
     "cls-hooked": "^4.2.2",
     "cls-rtracer": "^1.4.1",
     "consul": "^0.36.0",
+    "joi": "^17.4.0",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.19",
     "morgan": "^1.10.0",
